PROJECT(ysid)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(ysid_VERSION_MAJOR 0)
SET(ysid_VERSION_MINOR 1)

IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_CXX_FLAGS "-std=c++0x -Wall -O3 -g")
  SET(CMAKE_CXX_FLAGS_DEBUG "-std=c++0x -O0 -fno-inline -g -Wall")
  SET(CMAKE_CXX_FLAGS_RELEASE  "-std=c++0x -O3 -DNDEBUG -Wall")
ENDIF()

IF(MSVC)
ENDIF()

ADD_SUBDIRECTORY(src bin)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
CONFIGURE_FILE(ysid_config.h.in ysid_config.h)

INCLUDE(InstallRequiredSystemLibraries)
SET(CPACK_GENERATOR "TGZ")
SET(CPACK_RESOURCE_FILE_LICENSE
 "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
SET(CPACK_PACKAGE_VERSION_MAJOR "${ysid_VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${ysid_VERSION_MINOR}")
INCLUDE(CPack)
